Update library properties

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=DShotRMT
+name=DShotRMT_AM32
 version=0.2.4
 author=derdoktor667
 maintainer=derdoktor667
 sentence=DShotRMT Library supporting all DShot Types and speeds. Tested with BlHeli_S.
 paragraph=This library can control a BlHeli_S by using encoded DShot commands.
 category=Device Control
-url=https://github.com/derdoktor667/DShotRMT
+url=https://github.com/barefootbrock/DShotRMT_AM32
 architectures=esp32
